@@ -5,6 +5,7 @@ History:
 5.1.1   2020/xx/xx
       - removed usage of deprecated "license_file" option for "license_files"
       - fixed flake8 usage in pre-commit
+      - Linux: the implementation is now thread-safe (fixes #169)
       - :heart: contributors: @
 
 5.1.0   2020/04/30
